--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 # Don't save phpunit under version control.
 phpunit
 
-app/config/Database.php
+app/Config/Database.php
 .htaccess
 
 #-------------------------
